other/s-z/spread-pods-across-topology/deploy03-not-patched.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    distributed: required
    app: busybox
  name: deployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - image: busybox:1.35
        name: busybox
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: zone
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            distributed: required
