other/s-z/spread-pods-across-topology/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: spread-pods
policies:
- spread-pods-across-topology.yaml
resources:
- resource.yaml
results:
- kind: Deployment
  patchedResource: patchedResource.yaml
  policy: spread-pods
  resources:
  - mydeploy
  result: pass
  rule: spread-pods-across-nodes
